web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__distinct__remove-duplicates-from-each-group__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.postgres\n\nfrom employees\ngroup department (\n  sort age\n  take 1\n)\n"
---
SELECT DISTINCT
  ON (department) *
FROM
  employees
ORDER BY
  department,
  age
